# ultimate-tictactoe

./: .gitignore  Cargo.toml  README.md  file.txt  out.rs
benches/: perft_benchmark.rs  search_benchmark.rs
scripts/: bundle.sh  gen_hopeless_table.py  gen_magic_number.py  gen_win_table.py  use.rs
src/: codingame.rs  codinggame.rs  format.rs  interface.rs  lib.rs  main.rs  moves.rs  temp.rs
src/engine/: config.rs  eval.rs  mcts.rs  mod.rs  search.rs  utils.rs
src/moves/: format.rs  mod.rs
tests/: eval_test.rs  format_test.rs  movegen_test.rs  perft_test.rs
tests/common/: mod.rs
