[package]
name = "uttt"
version = "0.1.0"
authors = ["Gary Geng <garygengxiao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6"
bitintr = "0.3.0"

[dev-dependencies]
criterion = "0.3"

[lib]
bench = false

[[bin]]
name = "main"
path = "src/main.rs"
bench = false

[[bin]]
name = "temp"
path = "src/temp.rs"
bench = false

[[bin]]
name = "interface"
path = "src/interface.rs"
bench = false

[[bench]]
name = "search_benchmark"
harness = false
