[package]
name = "uttt"
version = "0.1.0"
authors = ["Gary Geng <garygengxiao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6"
bitintr = "0.3"
rand = { version = "0.7", features = ["small_rng"] }

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true

[lib]
bench = false

[[bin]]
name = "main"
path = "src/main.rs"
bench = false

[[bin]]
name = "temp"
path = "src/temp.rs"
bench = false

[[bin]]
name = "interface"
path = "src/interface.rs"
bench = false

[[bench]]
name = "search_benchmark"
harness = false
